style(html): update css file for base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
         {% endblock %}
     </main>
     <footer>
-        <p>&copy; 2023 QR Flask App</p>
+        <p>&copy; 2023 Powered by Isabella Cappellino & Marin Cervinschi</p>
     </footer>
 </body>
 </html>
