--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="container">
         <div>
-            <h1>Benvenuto in QR Dinamico</h1>
+            <h1>Welcome to dynamic QR</h1>
             <p>Un'applicazione semplice e veloce per generare QR code dinamici.</p>
             <button class="sign-in-button">Sign In</button>
         </div>
