--- a/app/static/style.css
+++ b/app/static/style.css
@@ -19,21 +19,21 @@ body {
 }
 
 header {
-    height: 10vh;
+    position: sticky;
 }
 
 header img {
-    margin: 20px;
+    margin: 20px 20px 0;
     height: 60px;    
 }
 
 footer {
-    height: 10vh;
     background-color: var(--footer-color);
     text-align: center;
-    padding: 10px 0;
+    padding: 5px 0;
     color: white;
-    font-weight: bold;
+    font-weight: 600;
+    font-size: 14px;
 }
 
 .container {
