refactor(html): improve structure and style of index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="container">
-        <div>
-            <h1>Welcome to dynamic QR</h1>
-            <p>Un'applicazione semplice e veloce per generare QR code dinamici.</p>
-            <button class="sign-in-button">Sign In</button>
+        <div class="text-container">
+            <h2>Welcome to Dynamic QR Code</h2>
+            
+            <button class="sign-in-button">SIGN IN</button>
         </div>
     </div>
 {% endblock %}
