--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,9 +1,9 @@
 :root {
     --bg-color: white;
     --text-color: black;
-    --footer-color: #4a7c59;
+    --primary-color: #4a7c59;
     --details-color: #8fc0a9;
-    --other-color: #68b0ab;
+    --other-color: #b1d3c4;
 }
 
 body {
@@ -28,7 +28,7 @@ header img {
 }
 
 footer {
-    background-color: var(--footer-color);
+    background-color: var(--primary-color);
     text-align: center;
     padding: 5px 0;
     color: white;
@@ -38,20 +38,44 @@ footer {
 
 .container {
     height: 80vh;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
-.container h1 {
-    font-size: 2.5rem;
-    color: var(--footer-color);
-    margin-bottom: 20px;
+.text-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    background-color: var(--other-color);
+    border-radius: 20px;
 }
 
-.container p {
-    font-size: 1.2rem;
-    color: var(--details-color);
-    margin-bottom: 40px;
+.container h2 {
+    font-size: 2.5rem;
+    margin: 20px 20px 0;
+    color: var(--primary-color);
+}
+
+.sign-in-button {
+    padding: 15px 30px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: var(--primary-color);
+    background-color: rgba(255, 255, 255, 0.316);
+    border: 3px solid var(--primary-color);
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.sign-in-button:hover {
+    background-color: var(--primary-color);
+    color: white;
 }
