--- a/app/static/style.css
+++ b/app/static/style.css
@@ -3,7 +3,7 @@
     --text-color: black;
     --primary-color: #4a7c59;
     --details-color: #8fc0a9;
-    --other-color: #b1d3c4;
+    --details2-color: #b1d3c4;
 }
 
 body {
@@ -53,7 +53,7 @@ footer {
     align-items: center;
     gap: 20px;
     padding: 20px;
-    background-color: var(--other-color);
+    background-color: var(--details2-color);
     border-radius: 20px;
 }
 
@@ -65,17 +65,70 @@ footer {
 
 .sign-in-button {
     padding: 15px 30px;
-    font-size: 1rem;
-    font-weight: bold;
-    color: var(--primary-color);
     background-color: rgba(255, 255, 255, 0.316);
     border: 3px solid var(--primary-color);
     border-radius: 30px;
     cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--primary-color);
     transition: background-color 0.3s;
 }
 
 .sign-in-button:hover {
     background-color: var(--primary-color);
     color: white;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--bg-color);
+    padding: 2rem;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+    width: 100%;
+    max-width: 300px;
+    gap: 30px;
+}
+
+.form-section {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: left;
+    margin-bottom: 1rem;
+}
+
+.form-section label {
+    font-weight: bold;
+    font-size: 1rem;
+    text-align: left;
+    color: var(--text-color);
+}
+
+.form-section input {
+    border: 2px solid var(--primary-color);
+    padding: 12px;
+    border-radius: 30px;
+}
+
+.form-container button {
+    width: 100%;
+    background-color: var(--primary-color);
+    border-radius: 30px;
+    border: 3px solid var(--primary-color);
+    padding: 10px;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: background-color 0.8s ease;
+    margin-top: 0.8rem;
+}
+
+.form-container button:hover{
+    background-color: var(--details2-color);
+    border: 3px solid var(--primary-color);
+    color: var(--primary-color);
 }
