style(html): update css in 404.html

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -9,7 +9,7 @@
             --bg-color: #f0f4f8;
             --text-color: #2d3748;
             --primary-color: #4a7c59;
-            --secondary-color: #8fc0a9;
+            --secondary-color: #4ca67c;
             --accent-color: #b1d3c4;
         }
 
