--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -97,9 +97,9 @@
         <svg class="error-image" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 8V12M12 16H12.01M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
-        <h1>404</h1>
-        <h2>Page not found</h2>
-        <p> The page you're looking for doesn't exist or has been moved.</p>
+        <h1>{{ status }}</h1>
+        <h2>{% if status == '404' %}Page not found{% elif status == '401' %}Unauthorized{% endif %}</h2>
+        <p>{% if status == '404' %}The page you're looking for doesn't exist or has been moved.{% elif status == '401' %}You do not have permission to access this page.{% endif %}</p>
         <a href="/" class="btn">Go Back to Homepage</a>
     </div>
 </body>
