--- a/app/static/style.css
+++ b/app/static/style.css
@@ -6,6 +6,15 @@
     --details2-color: #b1d3c4;
 }
 
+*::-webkit-scrollbar {
+    display: none; /* Per Chrome, Safari e Edge */
+}
+
+button {
+    cursor: pointer;
+}
+
+
 body {
     box-sizing: border-box;
     margin: 0;
@@ -40,9 +49,11 @@ footer {
     height: 80vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    gap: 50px;
 }
 
 .text-container {
@@ -57,7 +68,7 @@ footer {
     border-radius: 20px;
 }
 
-.container h2 {
+.container h2, .form-container h2 {
     font-size: 2.5rem;
     margin: 20px 20px 0;
     color: var(--primary-color);
@@ -132,3 +143,90 @@ footer {
     border: 3px solid var(--primary-color);
     color: var(--primary-color);
 }
+
+.dashboard-container {
+    height: 87vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 50px;
+}
+
+.links-grid-wrapper {
+    background-color: #f9f9f9;
+    padding: 0.5rem;
+    border-radius: 20px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+    width: 100%;
+    max-width: 60%;
+    gap: 30px;
+    border: 3px solid var(--primary-color);
+}
+
+.links-header {
+    display: grid;
+    grid-template-columns: 6% 20% 48% 5% 5% 5%;
+    gap: 1rem;
+    padding: 1rem 2rem 1rem;
+    background-color: #4a7c59;
+    border-radius: 15px 15px 0 0;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.links-grid {
+    display: grid;
+    grid-template-columns: 6% 20% 48% 5% 5% 5%;
+    gap: 1rem;
+    padding: 1rem;
+    max-height: 60vh;
+    overflow: scroll;
+    background-color: #eaf4ed;
+    border-radius: 0 0 15px 15px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.grid-element {
+    border: 1px solid #d1e2d9;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: white;
+    font-size: 0.95rem;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.grid-element:hover {
+    transform: scale(1.02);
+}
+
+.grid-button {
+    color: white;
+    border-radius: 50%;
+    font-weight: bold;
+    border: none;
+    width: 40px;
+    height: 40px;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.grid-button:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
