--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -4,7 +4,7 @@
     <div class="container" style="height: 90vh;">
         <div class="form-container">
             <h2>Sign In</h2>
-            <form>
+            <form method="POST" action="/private/admin">
                 <div class="form-section">
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" required>
@@ -13,6 +13,9 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                 </div>
+                {% for message in get_flashed_messages() %}
+                    <div class="flash">{{ message }}</div>
+                {% endfor %}
     
                 <button type="submit">SIGN IN</button>
             </form>
