--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,7 @@
         <div class="text-container">
             <h2>Welcome to Dynamic QR Code</h2>
             
-            
-            <a href="/admin" {% if request.path=='/admin' %} class="active" {% endif %}>
+            <a href="/private/admin" {% if request.path=='/admin' %} class="active" {% endif %}>
                 <button class="sign-in-button">SIGN IN</button>
             </a>
         </div>
