--- a/app/static/style.css
+++ b/app/static/style.css
@@ -69,9 +69,8 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
     padding: 20px;
-    background-color: var(--details2-color);
     border-radius: 20px;
 }
 
@@ -236,6 +235,57 @@ main {
 .grid-button:hover {
     transform: scale(1.1);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.flash {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 15px 25px;
+    background-color: #db2619; /* Rosso intenso */
+    color: white;
+    border-radius: 10px;
+    font-size: 1rem;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
+    animation: fade-in 0.5s ease-out;
+    z-index: 9999;
+}
+
+.flash p {
+    margin: 0;
+    font-weight: bold;
+}
+
+.flash button {
+    background-color: white;
+    color: #f44336;
+    border: none;
+    border-radius: 10px;
+    padding: 6px 10px;
+    font-size: 0.7rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform 0.6s;
+}
+
+.flash button:hover {
+    transform: scale(1.1);
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 /* Adattamenti per dispositivi medi */
