--- a/app/static/style.css
+++ b/app/static/style.css
@@ -29,8 +29,24 @@ body {
 
 header {
     position: sticky;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px 0;
 }
 
+header h2 {
+    color: var(--text-color);
+    font-size: 1.3rem;
+    font-weight: 500;
+   
+}
+
+header span {
+    color: var(--primary-color);
+    font-weight: bolder;
+}
 header img {
     margin: 20px 20px 0;
     height: 60px;    
