--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,9 @@
 <body>
     <header>
         <img src="{{ url_for('static', filename='/media/logo.png') }}" alt="logo" />
+        {% if g.user %}
+            <h2><strong><</strong> Welcome <span>{{ g.user['username'] }}</span>! <strong>/></strong></h2>
+        {% endif %}
     </header>
     <main>
         {% block content %}
