feat: logout button

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -46,4 +46,7 @@
             </form>
         </div>
     </div>
+    <form  action="/private/logout" method="POST">
+        <button class="logout" type="submit">Logout</button>
+    </form>
 {% endblock %}
