--- a/app/static/style.css
+++ b/app/static/style.css
@@ -293,6 +293,28 @@ main {
     transform: scale(1.1);
 }
 
+.logout {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    padding: 10px;
+    background-color: #f44336; /* Rosso intenso */
+    color: white;
+    border-radius: 10px;
+    border: 2px solid #f44338;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform 0.6s;
+}
+
+.logout:hover {
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform 0.6s;
+    transform: translate(10px, -10px); /* Add this line */
+}
+
 @keyframes fade-in {
     from {
         opacity: 0;
