--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <img src="{{ url_for('static', filename='/media/logo.png') }}" alt="logo" />
+        <a href="/">
+            <img src="{{ url_for('static', filename='/media/logo.png') }}" alt="logo" />
+        </a>
         {% if g.user %}
             <h2><strong><</strong> Welcome <span>{{ g.user['username'] }}</span>! <strong>/></strong></h2>
         {% endif %}
