--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -33,7 +33,7 @@
 
         <div class="form-container">
             <h2>Add link</h2>
-            <form method="POST" action="/private/dashboard">
+            <form method="POST" action="/private/dashboard/add">
                 <div class="form-section">
                     <label for="internal">Internal</label>
                     <input type="text" id="internal" name="internal" required>
