--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,12 @@
         <div class="text-container">
             <h2>Welcome to Dynamic QR Code</h2>
             
-            <a href="/private/admin" {% if request.path=='/admin' %} class="active" {% endif %}>
+            <a href="/private/admin">
                 <button class="sign-in-button">SIGN IN</button>
             </a>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2023 Powered by Isabella Cappellino & Marin Cervinschi</p>
+    </footer>
 {% endblock %}
