--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container" style="height: 100vh;">
+    <div class="container">
         <div class="form-container">
             <h2>Sign In</h2>
             <form method="POST" action="/private/admin">
@@ -17,5 +17,4 @@
             </form>
         </div>
     </div>
-
 {% endblock %}
