--- a/app/static/style.css
+++ b/app/static/style.css
@@ -40,6 +40,7 @@ header h2 {
     color: var(--text-color);
     font-size: 1.3rem;
     font-weight: 500;
+    text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
    
 }
 
@@ -166,6 +167,43 @@ main {
     color: var(--primary-color);
 }
 
+.popUp {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.popUp:target {
+    display: flex;
+}
+
+.close-popup-btn {
+    position: fixed;
+    padding: 10px;
+    color: #333;
+    border: none;
+    font-size: 25px;
+    cursor: pointer;
+    color: #888;
+
+   &:hover {
+        text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        color: #333;
+        transform: scale(1.1);
+    } 
+
+    &:active {
+        color: red;
+    }
+}
+
 .dashboard-container {
     height: auto;
     width: 100%;
@@ -191,7 +229,7 @@ main {
 
 .links-header {
     display: grid;
-    grid-template-columns: 6% 20% 48% 5% 5% 5%;
+    grid-template-columns: 6% 20% 48% 5% 10%;
     gap: 1rem;
     padding: 1rem 2rem 1rem;
     background-color: #4a7c59;
@@ -200,6 +238,28 @@ main {
     font-size: 1.2rem;
     font-weight: bold;
     text-align: center;
+
+    >button {
+        border: none;
+        background-color: transparent;
+        font-size: 1.2rem;
+        padding: 0;
+        >i {
+            color: white;
+
+            &:hover {
+                color: #FFBF00;
+                text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+                transform: scale(1.1);
+            }
+
+        }
+        
+        &:active {
+            transform: scale(0.95);
+            color: #FFBF00;
+        }
+    }
 }
 
 .links-grid {
@@ -311,6 +371,7 @@ main {
         border: none;
         cursor: pointer;
         transition: all 0.2s ease-in-out;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
 
         >i {
             font-size: 1.2rem;
