--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="dashboard-container">
-        <div class="links-grid-wrapper">
-            <div class="links-header">
-                <div>ID</div>
-                <div>INTERNAL</div>
-                <div id="hidden">EXTERNAL</div>
-                <div class="space"></div>
-                <button id="add_button" class="add"><i class='bx bx-add-to-queue' ></i></button>
-            </div>       
-                             
+<div class="dashboard-container">
+    <div class="links-grid-wrapper">
+        <div class="links-header">
+            <div>ID</div>
+            <div>INTERNAL</div>
+            <div id="hidden">EXTERNAL</div>
+            <div class="space"></div>
+            <button id="add_button" class="add"><i class='bx bx-add-to-queue'></i></button>
+        </div>
+
         <div class="grid">
             {% for link in links %}
             <form class="links-grid" method="POST" action="">
                 <input type="text" class="grid-element" id="id" name="id" value="{{ link.id }}">
-                <input type="button" class="grid-element" id="internal" name="internal" value="{{link.internal}}">
+                <a class="grid-element" href="{{link.external}}">{{link.internal}}</a>
                 <input type="button" class="grid-element" id="external" name="external" value="{{link.external}}">
                 <button type="submit" class="grid-button" style="background-color: red;" data-action="/delete">
                     <i class='bx bx-trash-alt'></i>
@@ -28,12 +28,12 @@
             </form>
             {% endfor %}
         </div>
-      
+
         <div class="popUp" id="add_form">
             <div class="form-container">
                 <span id="close_button" class="close-popup-btn">&times;</span>
                 <h2>Add link</h2>
-                <form method="POST" action="/private/dashboard">
+                <form method="POST" action="/private/dashboard/add">
                     <div class="form-section">
                         <label for="internal">Internal</label>
                         <input type="text" id="internal" name="internal" required>
@@ -48,70 +48,4 @@
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-    
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        // Select all forms in the page
-        const forms = document.querySelectorAll('.links-grid');
-        let isEditing = false; 
-
-        // Loop through each form
-        forms.forEach(form => {
-            const buttons = form.querySelectorAll('.grid-button');
-            const editButton = form.querySelector('button[data-action="/edit"]');
-            const externalInput = form.querySelector('input[name="external"]');
-            const pencilIcon = editButton.querySelector('i');
-            isEditing = false;
-
-            buttons.forEach(button => {
-                button.addEventListener('click', function (e) {
-                    // Prevent the default form submission
-                    e.preventDefault();
-
-                    // Set the form's action to the data-action of the clicked button
-                    const action = button.getAttribute('data-action');
-                    form.setAttribute('action', '/private/dashboard' + action);
-                    console.log(action);
-
-                    // Confirm the action
-                    if (button.getAttribute('data-action') === '/delete' && confirm('Are you sure you want to remove?')) {
-                        // Submit the form after confirmation
-                        form.submit();
-                    }
-
-                    if (action === '/edit') {
-                        if (!isEditing) {
-                            // Modalità modifica - Cambia icona e tipo di input
-                            pencilIcon.classList.remove('bx-pencil');
-                            pencilIcon.classList.add('bx-check-square');
-                            externalInput.type = 'text';  // Rendi il campo modificabile
-                            externalInput.focus();
-                            const textLength = externalInput.value.length;
-                            externalInput.setSelectionRange(textLength, textLength);
-                            
-                            editButton.style.backgroundColor = "#8fc0a9"
-                            editButton.style.color = "#000";
-                            // Imposta lo stato di editing
-                            isEditing = true;
-                        } else {
-                            // Imposta lo stato di non editing
-                            isEditing = false;
-
-                            if (confirm('Are you sure you want to edit?')) {
-                                // Submit the form after confirmation
-                                form.submit();
-                            }
-                        }
-                    }
-                });
-            });
-        });
-
-        document.addEventListener('click', function(e) {
-            if (isEditing && !e.target.closest('.links-grid')) {
-                alert("You are in edit mode. If you want to save, click the 'check' button!");
-            }
-        });
-    });
-</script>
-{% endblock %}
+    {% endblock %}
