--- a/app/static/style.css
+++ b/app/static/style.css
@@ -275,6 +275,10 @@ main {
     padding: 0.5rem;
     align-items: center;
     justify-content: space-between;
+
+    >a:hover {
+        text-decoration: underline;
+    }
 }
 
 .grid-element {
@@ -288,6 +292,8 @@ main {
     text-align: center;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
+    text-decoration: none;
+    color: var(--text-color);
 }
 
 .grid-element:hover {
