--- a/app/static/dashboard.css
+++ b/app/static/dashboard.css
@@ -1,6 +1,3 @@
-
-
-
 .popUp {
     display: none;
     flex-direction: column;
@@ -66,13 +63,15 @@
     border-radius: 0 0 15px 15px;
     max-height: 60vh;
     overflow: auto;
+    padding: 1rem;
 }
 
 .links-header {
     display: grid;
-    grid-template-columns: 6% 20% 48% 5% 10%;
-    gap: 1rem;
-    padding: 1rem 2rem 1rem;
+    grid-template-columns: 6% 20% 48% 5% 5% 5%;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
     background-color: #4a7c59;
     border-radius: 15px 15px 0 0;
     color: white;
@@ -81,10 +80,12 @@
     text-align: center;
 
     >button {
+        justify-content: flex-end;
         border: none;
         background-color: transparent;
         font-size: 1.2rem;
         padding: 0;
+
         >i {
             color: white;
 
@@ -93,7 +94,6 @@
                 text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
                 transform: scale(1.1);
             }
-
         }
         
         &:active {
@@ -106,7 +106,7 @@
 .links-grid {
     display: grid;
     grid-template-columns: 6% 20% 48% 5% 5% 5%;
-    padding: 0.5rem;
+    padding-bottom: 1rem;
     align-items: center;
     justify-content: space-between;
 
@@ -127,6 +127,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
     text-decoration: none;
+    text-overflow: ellipsis;
     color: var(--text-color);
 }
 
