--- a/app/static/dashboard.css
+++ b/app/static/dashboard.css
@@ -36,7 +36,7 @@
 }
 
 .dashboard-container {
-    height: auto;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -44,7 +44,6 @@
     align-items: center;
     text-align: center;
     gap: 50px;
-    margin-top: 20px;
 }
 
 .links-grid-wrapper {
