--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -15,7 +15,7 @@
             {% for link in links %}
             <form class="links-grid" method="POST" action="">
                 <input type="text" class="grid-element" name="id" value="{{ link.id }}">
-                <a class="grid-element" href="{{link.external}}">{{link.internal}}</a>
+                <a class="grid-element" href="http://{{link.external}}">{{link.internal}}</a>
                 <input type="button" class="grid-element" style="padding: 15px 40px 15px;" name="external" value="{{link.external}}">
                 <button type="submit" class="grid-button" style="background-color: red;" data-action="/delete">
                     <i class='bx bx-trash-alt'></i>
