--- a/app/static/dashboard.css
+++ b/app/static/dashboard.css
@@ -31,7 +31,7 @@
     } 
 
     &:active {
-        color: red;
+        color: #93ebeb;
     }
 }
 
@@ -46,19 +46,20 @@
     gap: 50px;
 }
 
+
 .links-grid-wrapper {
-    background-color: #f9f9f9;
+    background-color: var(--bg-color);
     padding: 0.5rem;
     border-radius: 20px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
     width: 100%;
     max-width: 60%;
     gap: 30px;
-    border: 3px solid var(--primary-color);
+    border: 3px solid #1fabad ;
 }
 
 .grid {
-    background-color: #eaf4ed;
+    background-color: #e9fbfb;
     border-radius: 0 0 15px 15px;
     max-height: 60vh;
     overflow: auto;
@@ -71,7 +72,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
-    background-color: #4a7c59;
+    background-color: var(--primary-color);
     border-radius: 15px 15px 0 0;
     color: white;
     font-size: 1.2rem;
@@ -89,15 +90,14 @@
             color: white;
 
             &:hover {
-                color: #FFBF00;
-                text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+                color: #93ebeb;
                 transform: scale(1.1);
             }
         }
         
         &:active {
             transform: scale(0.95);
-            color: #FFBF00;
+            color: #93ebeb;
         }
     }
 }
@@ -128,6 +128,12 @@
     text-decoration: none;
     text-overflow: ellipsis;
     color: var(--text-color);
+
+}
+
+.grid-element[type='text']:focus {
+    outline: none;
+    border: 2px solid #2cb6fb;
 }
 
 .grid-element:hover {
