--- a/app/static/style.css
+++ b/app/static/style.css
@@ -32,29 +32,20 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px 0;
+    padding: 5px 20px 5px;
+    margin: 1.5rem;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
 
-header h2 {
-    color: var(--bg-color);
-    font-size: 1.3rem;
-    font-weight: 500;
-    text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 
-    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-    cursor: pointer;
-    border-radius: 14px;
-    padding: 8px;
-   
-}
 
 header span {
     color: #93ebeb;
     font-weight: bolder;
-    
 }
+
 header img {
-    margin: 20px 20px 0;
     height: 60px;    
 }
 
@@ -193,6 +184,17 @@ main {
     justify-content: center;
     gap: 20px;
 
+    >h2 {
+        color: var(--bg-color);
+        font-size: 1.3rem;
+        font-weight: 500;
+        text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    
+        border-radius: 14px;
+        padding: 8px;
+       
+    }
+
     .logout-button {
         display: flex;
         align-items: center;
@@ -200,20 +202,23 @@ main {
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        background-color: #f3f4f6;
-        border: none;
+        background: none;
+        border: white 2px solid;
         cursor: pointer;
         transition: all 0.2s ease-in-out;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
 
         >i {
             font-size: 1.2rem;
-            color: var(--primary-color);
+            color: white;
             font-weight: bold;
+            &:hover {
+                color: var(--primary-color);
+            }
         }
 
         &:hover {
-            background-color: #e5e7eb;
+            background-color: #e9fbfb;
             transform: scale(1.05);
         }
 
@@ -224,7 +229,7 @@ main {
 
         &:active {
             transform: scale(0.95);
-          }
+        }
       }
 
 }
