--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root {
     --bg-color: white;
     --text-color: black;
@@ -7,6 +8,10 @@
 
 *::-webkit-scrollbar {
     display: none; /* Per Chrome, Safari e Edge */
+}
+
+* {
+    font-family: 'Poppins', sans-serif;
 }
 
 button {
