--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="container">
         <div class="text-container">
-            <h1 id="demotext">Welcome to Dynamic QR Code</h1>
+            <h1>Welcome to Dynamic QR Code</h1>
             
             <a href="/private/admin">
                 <button class="sign-in-button">SIGN IN</button>
