--- a/app/static/dashboard.css
+++ b/app/static/dashboard.css
@@ -88,7 +88,7 @@
 
         >i {
             color: white;
-
+            font-size: 1.4rem;
             &:hover {
                 color: #93ebeb;
                 transform: scale(1.1);
