--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Page not found</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='error.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/error.css') }}">
 </head>
 <body>
     <div class="container">
