--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} Dashboard {% endblock %}
 {% block content %}
 <div class="dashboard-container">
     <div class="links-grid-wrapper">
