--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Dynamic QR Code
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="text-container">
