--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -238,3 +238,63 @@ main {
       }
 
 }
+
+@media screen and (max-width: 540px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+
+        >a {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            >img {
+                height: 50px;
+            }
+        }
+    }
+
+    .user_true {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .user_true h2 {
+        font-size: 16px;
+        padding: 0;
+    }
+
+    .logout-button {
+        font-size: 18px;
+    }
+
+    .form-container {
+        max-width: 60%;
+        gap: 10px;
+
+        >h2 {
+            font-size: 30px;
+        }
+    }
+
+    .form-container button {
+        font-size: 0.9rem;
+        margin-top: 0;
+    }
+
+    .form-section {
+        >label {
+            font-size: 15px;
+        }
+    }
+
+    .form-section input {
+        padding: 10px;
+        font-size: 0.85rem;
+    }
+}
