--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -16,7 +16,7 @@
             <form class="links-grid" method="POST" action="">
                 <input type="button" class="grid-element" name="id" value="{{ link.id }}">
                 <a class="grid-element" href="http://{{link.external}}">{{link.internal}}</a>
-                <input type="button" class="grid-element" style="padding: 15px 40px 15px;" name="external" value="{{link.external}}">
+                <input type="button" class="grid-element" id="hidden" style="padding: 15px 40px 15px;" name="external" value="{{link.external}}">
                 <button type="submit" class="grid-button" style="background-color: red;" data-action="/delete">
                     <i class='bx bx-trash-alt'></i>
                 </button>
