refactor: improvements with flash

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -239,13 +239,12 @@ main {
 
 }
 
+/* Flash message container */
 .flash {
     position: fixed;
     bottom: 20px;
     right: 20px;
     padding: 15px 25px;
-    background-color: #db2619; /* Rosso intenso */
-    color: white;
     border-radius: 10px;
     font-size: 1rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -256,28 +255,76 @@ main {
     gap: 15px;
     animation: fade-in 0.5s ease-out;
     z-index: 9999;
+    background-color: white;
 }
 
+/* Flash success message */
+.flash.success {
+    border: 3px solid #28a745; /* Green background */
+    color: #28a745;
+
+    >button{
+        border: 3px solid #28a745;
+        
+        &:hover {
+            color: white;
+            background-color: #2188379c;
+        }
+    }
+}
+
+/* Flash error message */
+.flash.error {
+    border: 3px solid #db2619; /* Intense red background */
+    color: #db2619;
+    >button{
+        border: 3px solid #db2619;
+
+        &:hover {
+            color: white;
+            background-color: #d9271ab7;
+        }
+    }
+}
+
+/* Flash message text */
 .flash p {
     margin: 0;
     font-weight: bold;
 }
 
+/* Button inside flash message */
 .flash button {
     background-color: white;
-    color: #f44336;
+    color: inherit; /* Inherit the text color (green for success, red for error) */
     border: none;
     border-radius: 10px;
     padding: 6px 10px;
     font-size: 0.7rem;
     font-weight: bold;
     cursor: pointer;
-    transition: transform 0.6s;
+    transition: transform 0.3s ease-in-out, background-color 0.3s;
 }
 
+/* Button hover effect */
 .flash button:hover {
     transform: scale(1.1);
+    background-color: inherit; /* Inherit background color (green/red) */
+    color: white; /* Change button text color to white when hovered */
 }
+
+/* Animation for fading in */
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 
 @media screen and (max-width: 540px) {
     header {
